PROJECT(osgcairodrawspeed)

LINK_LIBRARIES(osgCairo
    ${OSGDB_LIBRARY}
    ${OSGGA_LIBRARY}
    ${OSGVIEWER_LIBRARY}
)

ADD_EXECUTABLE(osgcairodrawspeed osgcairodrawspeed.cpp)

INSTALL(TARGETS osgcairodrawspeed DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
SET_TARGET_PROPERTIES(osgcairodrawspeed PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
