PROJECT(osgcairoroads)

LINK_LIBRARIES(osgCairo
    ${OSGDB_LIBRARY}
    ${OSGGA_LIBRARY}
    ${OSGVIEWER_LIBRARY}
)

ADD_EXECUTABLE(osgcairoroads osgcairoroads.cpp)

INSTALL(TARGETS osgcairoroads DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
SET_TARGET_PROPERTIES(osgcairoroads PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
