PROJECT(osgcairotests)

LINK_LIBRARIES(osgCairo
    ${OSGDB_LIBRARY}
    ${OSGGA_LIBRARY}
    ${OSGVIEWER_LIBRARY}
)

ADD_EXECUTABLE(osgcairotests osgcairotests.cpp)

INSTALL(TARGETS osgcairotests DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
SET_TARGET_PROPERTIES(osgcairotests PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
