PROJECT(osgcairoutil)

LINK_LIBRARIES(osgCairo
    ${OSGDB_LIBRARY}
    ${OSGGA_LIBRARY}
    ${OSGVIEWER_LIBRARY}
)

ADD_EXECUTABLE(osgcairoutil osgcairoutil.cpp)

INSTALL(TARGETS osgcairoutil DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
SET_TARGET_PROPERTIES(osgcairoutil PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
